--- a/TODO.org
+++ b/TODO.org
@@ -8,7 +8,7 @@ expect it to be state-of-the-art with respect to computer science. After all, I 
 My latest idea is to use a microservices architecture and distribute these services in a [[https://github.com/svanderburg/disnix][Disnix]] cluster. Each node in the
 cluster should be easy to setup and deploy with a simple script (all you have to do is get the [[http://sandervanderburg.blogspot.com/2011/02/disnix-toolset-for-distributed.html][DisnixService]] installed
 and running on a machine, add it to the configuration, and run =disnix-env ...=). This would allow easy deployment for
-people that want to support Aristotl but may not be able to program.
+people that want to support Aristotl but may not be able to program. See for example [[https://github.com/kiberpipa/nix-rehash#recontain---herokuhome][nix-rehash]].
 
 I have this down to the following services, each service communicating via REST or Websockets, depending on which is
 more appropriate:
@@ -27,6 +27,24 @@ more appropriate:
   Besides, it would be fun to write a diffing algorithm and such. Additionally, the database service will act as a
   /machine learning/ and /analytics/ service that can do all of the necessary computations for determining what citations
   and articles are related, etc.
+
+** Record schema
+
+   Each record needs to have a UUID at least. The rest depends on the kind of record. Thinkers will have different record
+   fields than concepts, obviously.
+  
+** Interface
+
+   #+BEGIN_EXAMPLE
+   curl -i -X GET http://api.aristotl.co/thinker/{name}
+   #+END_EXAMPLE
+
+   Returns the database record of a thinker. =name= gets matched for the closest-matching record. For example, "Hume"
+   would return the database record of "David Hume".
+
+   #+BEGIN_EXAMPLE
+   curl -i -X GET http://api.aristotl.co/concept/{name}
+   
 
 ** TODO [#B] Learn Datomic (schemas, setup, etc)
 ** TODO [#C] Define database schema
@@ -87,23 +105,21 @@ title match with title attribues -- I have no idea, it's 4am wtf
   
   Dir structure would look like this:
   
-  * services
-    * database
-      * src
-      * test
-    * crawler
-      * src
-      * test
-    * parser
-      * src
-      * test
-    * citations
-      * src
-      * test
-  * clients 
-    * web
-    * desktop
-    * cli
+  * database
+    * src
+    * test
+  * crawler
+    * src
+    * test
+  * parser
+    * src
+    * test
+  * citations
+    * src
+    * test
+  * web
+  * desktop
+  * cli
       
   The "clients" directory would eventually be a set of apps that could interface with the backend services.
   This will happend very far in the future.
